package com.mlmo.rpsgame.model.enums;

public enum GameModes {
    VS_MACHINE, VS_FRIEND, VS_RANDOM_PLAYER;
}
