package com.mlmo.rpsgame.model.enums;

public enum GameStates {
    WAITING, ACCEPTED, PLAYING, OVER;
}
