package com.mlmo.rpsgame.model.enums;

public enum NotificationEventType {
    INVITATION_ACCEPTED, ROUND_TURN_PLAY, NEW_GAME_CREATED
}
