package com.mlmo.rpsgame.model.enums;

public enum PlayerStates {
    READY, WAITING
}
