package com.mlmo.rpsgame.model.enums;

public enum RoundStates {
    PLAYING, OVER
}
